k8s-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: superpx-editor
  name: superpx-editor
  namespace: superpx-editor
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: superpx-editor
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: superpx-editor
    spec:
      containers:
        - env:
            - name: WS_URL
              value: 'ws://172.22.11.2:38080'
          image: 'hyperregistry.tmaxcloud.org/ck3-2/superpx-editor:0.0.0.1'
          imagePullPolicy: IfNotPresent
          name: web-app
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
