k8s-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: superpx-editor
  name: superpx-editor
  namespace: superpx-editor
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: superpx-editor
  type: ClusterIP
