k8s-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    ingress.tmaxcloud.org/name: superpx-editor
  name: superpx-editor
  namespace: superpx-editor
spec:
  ingressClassName: tmax-cloud
  rules:
    - host: superpx-editor.tmaxcloud.org
      http:
        paths:
          - backend:
              service:
                name: superpx-editor
                port:
                  number: 80
            path: /
            pathType: Prefix
